# fast-itoa

./: Cargo.toml
benches/: benchmark.rs
examples/: roundtrip.rs
src/: itoa.rs  lib.rs  lut.rs  test.rs
tools/: gen-lut.rb
