[package]
name = "fast-itoa"
version = "0.1.0"
edition = "2021"
crate-type = "lib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1"
smartstring = "1"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "benchmark"
harness = false
