[package]
name = "fast-itoa"
version = "0.1.0"
edition = "2021"
crate-type = "lib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

[dev-dependencies]
criterion = "0.4"
proptest = "1"

[[bench]]
name = "benchmark"
harness = false
